--- a/code/012_MA_MD.Rmd
+++ b/code/012_MA_MD.Rmd
@@ -85,6 +85,7 @@ show_raw_data_in_forest <- F
 add_subgroup_analysis   <- T
 subgroup_select <- 'subgroup_design'
 subgroup_select <- 'exposure_o2'
+subgroup_select <- 'nature_type_o2'
 # subgroup_select <- '' ## age group
 # subgroup_select <- '' ## exposure duration 
 
@@ -100,7 +101,7 @@ for (sub_ind_i in sub_indicator_selected) {
   
   if (add_subgroup_analysis == T) {
     exp_sub_mods_md2i <- exp_sub_mods_md2i %>%
-      dplyr::mutate(subgroup_selected = !!sym(byvar_subgroup)) 
+      dplyr::mutate(subgroup_selected = !!sym(subgroup_select)) 
   } else {
     exp_sub_mods_md2i <- exp_sub_mods_md2i %>%
       dplyr::mutate(subgroup_selected = 'NULL') %>%
@@ -118,7 +119,7 @@ for (sub_ind_i in sub_indicator_selected) {
     mean.c = c_mean,
     sd.e = e_sd_r,
     sd.c = c_sd_r,
-    studlab = study_label,
+    studlab = paste0(`Study ID`, ' - ', model_id), #study_label,
     
     sm = "SMD",
     method.smd = "Hedges",
@@ -147,6 +148,7 @@ for (sub_ind_i in sub_indicator_selected) {
     es.lower= ma_smd$lower.random,
     es.upper= ma_smd$upper.random,
     pval    = ma_smd$pval.random %>% round(., digits = 10),
+    I2      = as.numeric(ma_smd$I2) %>% round(., digits = 2),
     ## Number of studies
     n_study = ma_smd$k.all,
     ## Number of observations
@@ -166,10 +168,11 @@ for (sub_ind_i in sub_indicator_selected) {
       tool = mh_tool, 
       ind_sub = sub_ind_i, 
       subgroup = names(ma_smd$TE.common.w),
-      es.mean = as.numeric(ma_smd$TE.random),
+      es.mean = as.numeric(ma_smd$TE.random.w),
       es.lower= as.numeric(ma_smd$lower.random.w),
       es.upper= as.numeric(ma_smd$upper.random.w),
       pval    = as.numeric(ma_smd$pval.random.w) %>% round(., digits = 10),
+      I2      = as.numeric(ma_smd$I2.w) %>% round(., digits = 2),
       ## Number of studies
       n_study = as.numeric(ma_smd$k.all.w),
       ## Number of observations
@@ -204,7 +207,7 @@ for (sub_ind_i in sub_indicator_selected) {
   
   if (add_subgroup_analysis == T) {
     test.effect.subgroup.random_para = TRUE
-    postfix_subgroup <- "_subgroup"
+    postfix_subgroup <- paste0("_subgroup_", subgroup_select)
     height_cm <- height_cm + 10
   } else {
     test.effect.subgroup.random_para = F
@@ -215,7 +218,7 @@ for (sub_ind_i in sub_indicator_selected) {
   f <- paste0('./figures/', 'plot_forest_', mh_tool, '_', sub_ind_i, '_', today, 
               postfix_simplify, 
               postfix_subgroup, 
-              '.png'); f
+              '_.png'); f
   png(filename = f, 
       # width = 3000, height = 3000, units = "px", pointsize = 22,
       width = width_forestPlot, height = height_cm/1.5, units = "cm", res = 100)
@@ -243,9 +246,9 @@ for (sub_ind_i in sub_indicator_selected) {
          digits=2,
          digits.sd = 2,
          digits.tau2 = 2,
-         colgap = "0.4cm",
+         colgap = "0.2cm",
          # colgap.forest = "1cm",
-         colgap.forest.left = '1.2cm',
+         colgap.forest.left = '1.8cm',
          col.by = "black",
          col.square = "black",
          col.inside = "black",
@@ -275,27 +278,38 @@ for (sub_ind_i in sub_indicator_selected) {
 
 
 ## save MA result 
-ma_result <- rbind(ma_result.overall, ma_result.subgroup)
-fname <- paste0('./data/0302-MA-output/', paste('ma_result', mh_tool, '.rds', sep = '_')); fname
-saveRDS(ma_result, file = fname)
+cat('\n')
+fname <- paste0('./data/0302-MA-output/', paste('ma_result.overall', mh_tool, '.rds', sep = '_')); fname
+saveRDS(ma_result.overall, file = fname)
+
+if (add_subgroup_analysis == T) {
+  fname <- paste0('./data/0302-MA-output/', paste('ma_result.subgroup', mh_tool, '.rds', sep = '_')); fname
+  saveRDS(ma_result.subgroup, file = fname)
+}
 ```
 
 
 ### show overall effect
 
-```{r}
+```{r - overall}
 source('./code/func_plot_ma.R')
 library(ggpubr)
 
-ma_result_panas <- readRDS("./data/0302-MA-output/ma_result_PANAS_.rds") %>%
-  dplyr::filter(subgroup == 'Overall')
-ma_result_poms  <- readRDS("./data/0302-MA-output/ma_result_POMS_.rds") %>%
-  dplyr::filter(subgroup == 'Overall')
+ma_result_panas <- readRDS("./data/0302-MA-output/ma_result.overall_PANAS_.rds") 
+ma_result_poms  <- readRDS("./data/0302-MA-output/ma_result.overall_POMS_.rds") 
 
-ma_result_all <- rbind(ma_result_panas, ma_result_poms)
+ma_result.subgroup_panas <- readRDS("./data/0302-MA-output/ma_result.subgroup_PANAS_.rds") 
+ma_result.subgroup_poms  <- readRDS("./data/0302-MA-output/ma_result.subgroup_POMS_.rds") 
 
-p1 <- plot_effect_size_overall(data = ma_result_panas)
-p2 <- plot_effect_size_overall(data = ma_result_poms)
+ma_result_all <- rbind(ma_result_panas, ma_result_poms,
+                       ma_result.subgroup_panas, ma_result.subgroup_poms )
+
+p1 <- ma_result_all %>%
+  dplyr::filter(subgroup == 'Overall', tool == 'PANAS') %>%
+  plot_effect_size_overall(data = ., subgroup = NULL)
+p2 <- ma_result_all %>%
+  dplyr::filter(subgroup == 'Overall', tool == 'POMS') %>%
+  plot_effect_size_overall(data = .)
 
 
 ggarrange(p1 + rremove("x.title"), 
@@ -306,6 +320,41 @@ ggarrange(p1 + rremove("x.title"),
 
 fname <- paste0(dir.fig, 'plot_es_combined', today, postfix_subgroup, '.png'); fname
 func_ggsave(fname, w = 6, h = 5.5, save_png = T)
+```
+
+
+```{r - by group}
+source('./code/func_plot_ma.R')
+
+p1 <- ma_result_all %>%
+  dplyr::filter(subgroup != 'Overall', tool == 'PANAS') 
+
+len <- length(unique(p1$subgroup)); len
+facet_decide <- ifelse(len >3, T, F)
+
+p1 <- p1 %>%
+  plot_effect_size_overall(data = ., subgroup = 'subgroup', facet_bygroup = facet_decide, show_legend = F)
+
+
+
+p2 <- ma_result_all %>%
+  dplyr::filter(subgroup != 'Overall', tool == 'POMS') 
+len <- length(unique(p2$subgroup)); len
+facet_decide <- ifelse(len >3, T, F)
+
+p2 <- p2 %>%
+  plot_effect_size_overall(data = ., subgroup = 'subgroup', facet_bygroup = facet_decide, show_legend = T) + 
+  theme(legend.position = c(0.8, 0.1))
+# p2
+
+
+ggarrange(p1 + rremove("x.title"), 
+          p2, 
+          labels = c("A", "B"), ncol = 1, nrow = 2,
+          heights = c(0.4, 1),
+          align = "v")
+fname <- paste0(dir.fig, 'plot_es_combined_subgroup', today, postfix_subgroup, '.png'); fname
+func_ggsave(fname, w = 6, h = 5.5+1, save_png = T)
 ```
 
 **refs**
