--- a/code/011_MA_correlation.Rmd
+++ b/code/011_MA_correlation.Rmd
@@ -18,6 +18,9 @@ output: html_document
   
   The (Pearson or product-moment) correlation coefficient quantifies the direction and strength of the (linear) relationship between two quantitative variables and is therefore frequently used as the outcome measure for meta-analyses. Two alternative measures are a bias-corrected version of the correlation coefficient and Fisher's r-to-z transformed correlation coefficient.
 
+
+
+### metafor 
   * ri, the vector with the raw correlation coefficients
   * ni, the corresponding sample sizes. 
 
@@ -30,7 +33,13 @@ The options for the measure argument are then:
 # load the metafor package
 library(metafor)
 
-dat <- escalc(data=exp_sub_mods_coef, measure="ZCOR", ri=mean, ni=N)
+## [] need to fix data that are out of range later ... 
+exp_sub_mods_cor <- exp_sub_mods_coef %>%
+  dplyr::filter(!is.na(mean)) %>%
+  dplyr::filter(mean <=1 & mean >=-0.6)
+  
+
+dat <- escalc(data=exp_sub_mods_cor, measure="ZCOR", ri=mean, ni=n)
 study_label <- paste(dat$id, dat$model_id, sep = '_')
 
 res <- metafor::rma(yi, vi, data=dat, slab = study_label)
@@ -61,21 +70,25 @@ metafor::reporter(res, dir = dir.report)
 ```
 
 
+
+### meta
 ```{r}
-m.cor <- metacor(data = exp_sub_mods_coef,
-                 cor = mean, 
-                 n = N,
-                 studlab = id,
-                 fixed = FALSE,
-                 random = TRUE,
-                 method.tau = "REML",
-                 hakn = TRUE,
-                 title = "Health and Wellbeing")
+m.cor <- meta::metacor(
+  data = exp_sub_mods_cor,
+  cor = mean, 
+  n = n,
+  studlab = study_label,
+  fixed = FALSE,
+  random = TRUE,
+  method.tau = "REML",
+  hakn = TRUE,
+  title = "Health and Wellbeing")
 summary(m.cor)
 ```
 
 
-### Reporting the Amount of *Heterogeneity* In Your Meta-Analysis
+## Heterogeneity
+
   If the confidence interval around τ^2 does not contain zero, it indicates that some between-study heterogeneity exists in our data. 
   The value of τ is x, meaning that the true effect sizes have an estimated standard deviation of SD=x, expressed on the scale of the effect size metric.
   
@@ -86,7 +99,7 @@ summary(m.cor)
   ```The between-study heterogeneity variance was estimated at ^τ2 = 0.08 (95%CI: 0.03-0.35), with an I2 value of 63% (95%CI: 38-78%). The prediction interval ranged from g = -0.06 to 1.21, indicating that negative intervention effects cannot be ruled out for future studies.```
 
 
-#### Forest plot
+### Forest plot
   https://wviechtb.github.io/metafor/reference/forest.rma.html
 ```{r - forest}
 ### forest plot --------------------------------------------------------------------------
@@ -95,14 +108,21 @@ summary(m.cor)
 # print(forest(res, addpred=TRUE, header=TRUE))
 xlim_custmize = c(-1,1)
 
-f <- paste0('./figures/', 'plot_forest_', today ,'.png'); f
+f <- paste0('./figures/', 'plot_forest_cor_', today ,'.png'); f
 png(file=f, 
     # width = 3.5, height = 4, units = 'in', 
     width = 1000, height = 1000, units = "px", pointsize = 22,
     # res = 200
     ) 
-forest(res, addpred=TRUE, header=TRUE, xlim=xlim_custmize, slab = study_label, shade=TRUE)
+meta::forest(res, 
+             addpred=TRUE, header=TRUE, 
+             digits=2, 
+             print.I2 = T,
+             layout = "RevMan5",
+             xlim=xlim_custmize, slab = study_label, shade=TRUE)
 dev.off() 
+
+
 
 forest(res, addpred=TRUE, header=TRUE, xlim=xlim_custmize, slab = study_label) # showweights=TRUE
 forest(res, addpred=TRUE, header=TRUE, xlim=xlim_custmize, atransf=exp)
@@ -112,7 +132,7 @@ forest(res, addpred=TRUE, header=TRUE, xlim=xlim_custmize, atransf=exp, at=log(c
 
 
 * NOT in use
-```{r - forest plots with subgroups - to be fixed, eval=FALSE, include=FALSE}
+```{r - subgroup - to be fixed, eval=FALSE, include=FALSE}
 # a little helper function to add Q-test, I^2, and tau^2 estimate info
 mlabfun <- function(text, res) {
    list(bquote(paste(.(text),
@@ -180,15 +200,129 @@ text(x = -16, y = -1.8, pos=4, cex=0.90, bquote(paste("Test for Subgroup Differe
 
 
 
-```{r - forest - meta, eval=FALSE, fig.height=10, fig.width=8, include=FALSE}
-forest.meta(m.cor, 
-            sortvar = TE,
-            prediction = TRUE, 
-            print.tau2 = FALSE,
-            leftlabs = c("Author", "g", "SE"))
+```{r - forest - meta}
+width_forestPlot = 40
+height_cm <- nrow(exp_sub_mods_cor)/1.1
 
+f <- paste0('./figures/', 'plot_forest_cor_meta_', today, '3.png'); f
+png(filename = f, 
+    # width = 3000, height = 3000, units = "px", pointsize = 22,
+    width = width_forestPlot, height = height_cm/1.5, units = "cm", res = 100)
+  
+  
+p_forest <- meta::forest(
+  m.cor, 
+  # sortvar = TE,
+  # prediction = TRUE, 
+  # print.tau2 = T,
+  addpred=TRUE, 
+  header=TRUE, 
+  digits=2, 
+  print.I2 = T,
+  pooled.totals=T,
+  overall = T,
+  overall.hetstat = T,
+  
+  col.by = "black",
+  col.square = "black",
+  col.inside = "black",
+  col.square.lines = "black",
+  shade=TRUE,
+  layout = "RevMan5",
+  slab = study_label, shade=TRUE,
+  leftlabs = c("Study ID", "g", "SE"))
+p_forest
 
+dev.off()
 ```
+
+
+```{r - forest - meta - subgroup}
+add_subgroup_analysis <- T
+
+subgroup_select <- 'exposure_o1'
+subgroup_select <- 'nature_type_o1'
+
+ma_cor_data <- exp_sub_mods_cor %>%
+  dplyr::mutate(nature_type_o1 = str_to_sentence(nature_type_o1),
+                nature_type_o1 = case_when(
+                  nature_type_o1 %in% c("Other natural space/element", 'Garden', 
+                                        "Green view", "Views of nature",
+                                        "Greenspace - forest/tree", "Neighbourhood greenness" ,
+                                        "Public natural spaces",
+                                        "Greenspace use") ~ "Greenspace",
+                  nature_type_o1 == "Home/ courtyard garden" ~ "Greenspace",
+                  nature_type_o1 == "Community private green space" ~ "Greenspace",
+                  T ~ nature_type_o1
+                )) %>%
+  dplyr::filter(!is.na(exposure_o1)) %>%
+  dplyr::mutate(subgroup_selected = !!sym(subgroup_select)) 
+
+unique(ma_cor_data$exposure_o1)
+unique(ma_cor_data$nature_type_o1)
+
+ma_cor <-
+  meta::metacor(
+    data = ma_cor_data,
+    cor = mean, 
+    n = n,
+    studlab = study_label,
+    fixed = FALSE,
+    random = TRUE,
+    method.tau = "REML",
+    hakn = TRUE,
+    title = "Health and Wellbeing")
+
+
+
+
+
+## update the MA by adding subgroup analysis
+if (add_subgroup_analysis == T) {
+  ma_cor <- update(ma_cor, subgroup = subgroup_selected)
+  
+  test.effect.subgroup.random_para = TRUE
+  postfix_subgroup <- paste0("_subgroup_", subgroup_select)
+  height_cm <- height_cm
+    
+  } else {
+    test.effect.subgroup.random_para = F
+    postfix_subgroup <- ""
+  }
+
+f <- paste0('./figures/', 'plot_forest_cor_meta_',postfix_subgroup,  today, '.png'); f
+png(filename = f, 
+    # width = 3000, height = 3000, units = "px", pointsize = 22,
+    width = width_forestPlot/2, height = height_cm/2.2, units = "cm", res = 100)
+
+p_forest <- meta::forest(
+  ma_cor, 
+  # sortvar = TE,
+  # prediction = TRUE, 
+  # print.tau2 = T,
+  addpred=TRUE, 
+  header=TRUE, 
+  digits=2, 
+  print.I2 = T,
+  pooled.totals=T,
+  overall = T,
+  overall.hetstat = T,
+  
+  col.by = "black",
+  col.square = "black",
+  col.inside = "black",
+  col.square.lines = "black",
+  shade=TRUE,
+  layout = "RevMan5",
+  slab = study_label, shade=TRUE,
+  leftlabs = c("Study ID", "g", "SE"))
+p_forest
+
+dev.off()
+```
+
+
+
 ```{r}
 
 drapery(m.cor, 
@@ -199,7 +333,7 @@ drapery(m.cor,
 
 
 
-#### Funnel plot for publication bias
+### Funnel plot for publication bias
 
   Given our assumptions, and in the case when there is no publication bias, all studies would lie symmetrically around our pooled effect size (the vertical line in the middle), within the form of the funnel. 
   
@@ -237,7 +371,7 @@ funnel(trimfill(res), # , side = 'left'
 #        # back="grey90",
 #        hlines=NULL, ylab="Precision (1/se)")
 
-f <- paste0('./figures/', 'plot_funnel_', today, '.png'); f
+f <- paste0('./figures/', 'plot_funnel_cor_', today, '.png'); f
 png(file=f, 
     width = 1000, height = 1000, units = "px", pointsize = 22) 
 funnel(
@@ -254,21 +388,6 @@ dev.off()
 ```
 
 
-
-#### `meta`
-```{r}
-library(meta)
-m.cor <- metacor(cor = mean, 
-                 n = N,
-                 studlab = id,
-                 data = exp_sub_mods_coef,
-                 # fixed = FALSE,
-                 # random = TRUE,
-                 method.tau = "REML",
-                 hakn = TRUE,
-                 title = "Nature-Health")
-summary(m.cor)
-```
 
 
 
